# Math

./: stack.yaml
NelderTest/: NelderTest.cabal
NelderTest/src/: Main.hs
Optimization/: LICENSE  Optimization.cabal
Optimization/src/: NelderMead.hs
